fix(view): show full gray line on mobile

--- a/src/app/user/user-nav/user-nav.component.scss
+++ b/src/app/user/user-nav/user-nav.component.scss
@@ -5,7 +5,7 @@
     margin: 0 1rem;
     padding: 0.5rem 0;
     border: none;
-    background: white;
+    background: transparent;
     color: var(--color-inactive);
     font-size: 1rem;
     font-weight: 500;
